# ZPR23L_UltimateTicTacToe

./: .gitignore  CMakeLists.txt  Instrukcja_Prototyp_Projekt_ZPR.md  README.md  build_linux.sh  build_win32.ps1  reverse_proxy.conf
client/: README.md  angular.json  package-lock.json  package.json
client/src/: index.html  styles.css
client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  create-board.directive.ts  structs.ts
docconfig/: Languages.txt  Project.txt
docconfig/Working Data/: CodeDB.nd  Files.nd  Languages.nd  Project.nd
docconfig/Working Data/Output/: BuildState.nd  Config.nd  SearchIndex.nd
docs/: index.html
docs/classes/C/: BoardBase-Summary.js  BoardBase-SummaryToolTips.js  BoardBase-ToolTips.js  BoardBase.html  BoardIndexConverter-Summary.js  BoardIndexConverter-SummaryToolTips.js  BoardIndexConverter.html  ComputerPlayer-Summary.js  ComputerPlayer-SummaryToolTips.js  ComputerPlayer.html  GameEngine-Summary.js  GameEngine-SummaryToolTips.js  GameEngine.html  GameHandler-Summary.js  GameHandler-SummaryToolTips.js  GameHandler-ToolTips.js  GameHandler.html  HttpHandler-Summary.js  HttpHandler-SummaryToolTips.js  HttpHandler-ToolTips.js  HttpHandler.html  HttpHeaders-Summary.js  HttpHeaders-SummaryToolTips.js  HttpHeaders.html  HttpRequest-Summary.js  HttpRequest-SummaryToolTips.js  HttpRequest.html  HttpResponse-Summary.js  HttpResponse-SummaryToolTips.js  HttpResponse-ToolTips.js  HttpResponse.html  HumanPlayer-Summary.js  HumanPlayer-SummaryToolTips.js  HumanPlayer-ToolTips.js  HumanPlayer.html  IServerSocket-Summary.js  IServerSocket-SummaryToolTips.js  IServerSocket-ToolTips.js  IServerSocket.html  (+22 more)
docs/files/: HttpHandler-hpp-Summary.js  HttpHandler-hpp-SummaryToolTips.js  HttpHandler-hpp-ToolTips.js  HttpHandler-hpp.html  HttpHeaders-hpp-Summary.js  HttpHeaders-hpp-SummaryToolTips.js  HttpHeaders-hpp-ToolTips.js  HttpHeaders-hpp.html  HttpRequest-hpp-Summary.js  HttpRequest-hpp-SummaryToolTips.js  HttpRequest-hpp.html  HttpResponse-hpp-Summary.js  HttpResponse-hpp-SummaryToolTips.js  HttpResponse-hpp-ToolTips.js  HttpResponse-hpp.html
docs/files3/: IServerSocket-hpp-Summary.js  IServerSocket-hpp-SummaryToolTips.js  IServerSocket-hpp-ToolTips.js  IServerSocket-hpp.html  LinuxServerSocket-hpp-Summary.js  LinuxServerSocket-hpp-SummaryToolTips.js  LinuxServerSocket-hpp-ToolTips.js  LinuxServerSocket-hpp.html  ServerSocket-hpp-Summary.js  ServerSocket-hpp-SummaryToolTips.js  ServerSocket-hpp-ToolTips.js  ServerSocket-hpp.html  WIN32ServerSocket-hpp-Summary.js  WIN32ServerSocket-hpp-SummaryToolTips.js  WIN32ServerSocket-hpp-ToolTips.js  WIN32ServerSocket-hpp.html
docs/files4/: GameEngine-hpp-Summary.js  GameEngine-hpp-SummaryToolTips.js  GameEngine-hpp.html  GameHandler-hpp-Summary.js  GameHandler-hpp-SummaryToolTips.js  GameHandler-hpp.html
docs/files5/: BoardIndexConverter-hpp-Summary.js  BoardIndexConverter-hpp-SummaryToolTips.js  BoardIndexConverter-hpp-ToolTips.js  BoardIndexConverter-hpp.html
docs/files6/: BoardBase-hpp-Summary.js  BoardBase-hpp-SummaryToolTips.js  BoardBase-hpp.html  ComputerPlayer-hpp-Summary.js  ComputerPlayer-hpp-SummaryToolTips.js  ComputerPlayer-hpp.html  HumanPlayer-hpp-Summary.js  HumanPlayer-hpp-SummaryToolTips.js  HumanPlayer-hpp.html  InnerBoard-hpp-Summary.js  InnerBoard-hpp-SummaryToolTips.js  InnerBoard-hpp-ToolTips.js  InnerBoard-hpp.html  MainBoard-hpp-Summary.js  MainBoard-hpp-SummaryToolTips.js  MainBoard-hpp-ToolTips.js  MainBoard-hpp.html  Player-hpp-Summary.js  Player-hpp-SummaryToolTips.js  Player-hpp-ToolTips.js  Player-hpp.html
docs/menu/: classes.js  files.js  tabs.js
docs/other/: home.html
docs/search/: index.js
include/: HttpRequest.hpp  HttpResponse.hpp  IServerSocket.hpp  LinuxServerSocket.hpp  ServerSocket.hpp  WIN32ServerSocket.hpp
lib/: CMakeLists.txt  ServerSocket.cpp
lib/http/: HttpRequest.cpp  HttpResponse.cpp
lib/httphandler/: CMakeLists.txt  HttpRequest.cpp  HttpResponse.cpp
lib/linux/: LinuxServerSocket.cpp
lib/win32/: WIN32ServerSocket.cpp
server/: CMakeLists.txt  README.md  build_linux.sh  build_test_main_linux.sh  build_win32.ps1  run_tests_catch.sh
server/include/: HttpHandler.hpp  HttpHeaders.hpp  HttpRequest.hpp  HttpResponse.hpp  IServerSocket.hpp  LinuxServerSocket.hpp  ServerSocket.hpp  WIN32ServerSocket.hpp
server/include/entities/: BoardBase.h  BoardBase.hpp  ComputerPlayer.h  ComputerPlayer.hpp  HumanPlayer.h  HumanPlayer.hpp  InnerBoard.h  InnerBoard.hpp  MainBoard.h  MainBoard.hpp  Player.h  Player.hpp
server/include/gameengine/: GameEngine.hpp  GameHandler.hpp  GameStage.hpp
server/include/helpers/: BoardIndexConverter.hpp  MoveSimulator.hpp
server/include/http/: HttpHandler.hpp  HttpHeaders.hpp  HttpRequest.hpp  HttpResponse.hpp
server/include/socket/: IServerSocket.hpp  LinuxServerSocket.hpp  ServerSocket.hpp  WIN32ServerSocket.hpp
server/lib/: CMakeLists.txt  ServerSocket.cpp
server/lib/entities/: BoardBase.cpp  CMakeLists.txt  ComputerPlayer.cpp  HumanPlayer.cpp  InnerBoard.cpp  MainBoard.cpp  Player.cpp
server/lib/gameengine/: CMakeLists.txt  GameEngine.cpp  GameHandler.cpp  GameStage.cpp
server/lib/helpers/: BoardIndexConverter.cpp  CMakeLists.txt  MoveSimulator.cpp
server/lib/httphandler/: CMakeLists.txt  HttpHandler.cpp  HttpHeaders.cpp  HttpRequest.cpp  HttpResponse.cpp
server/lib/linux/: LinuxServerSocket.cpp
server/lib/win32/: WIN32ServerSocket.cpp
server/src/: config.hpp  gameMain.cpp  main.cpp  main.hpp
server/templates/: BoardState.json  CreateGameResponse.json  EndGameRepsonse.json  GameStage.json  GameState.json  InnerBoard.json  MoveResponse.json  PickSegmentResponse.json  WinnerBoard.json  board.json
server/test/: CMakeLists.txt  README.md
server/test/engine/: GameEngineTests.cpp  GameHandlerTests.cpp  GameStageTests.cpp
server/test/entities/: InnerBoardTests.cpp  MainBoardTests.cpp  PlayerTests.cpp
server/test/helpers/: HelperTests.cpp
server/test/http/: HttpHeadersTest.cpp  HttpRequestTest.cpp  HttpResponseTest.cpp
src/: main.cpp
(+70 files in other folders)
